--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shopingList">Guest House</li>
+		<li data-ns-test="shopingList">New Car</li>
+		<li data-ns-test="shopingList">iPhone</li>
+	</ol>
+	<ul>
+		<li data-ns-test="holidayList">Swizerland</li>
+		<li data-ns-test="holidayLuist">bangkok</li>
+		<li data-ns-test="holidayList">Goa</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
